--- a/web/src/views/main_view/main_view.html
+++ b/web/src/views/main_view/main_view.html
@@ -1,5 +1,9 @@
 <polymer-element name="main-view">
   <template>
+    <style>
+      @import "resources/css/app.css";
+    </style>
+
     <h1>Change Calculator</h1>
 
     <div id="wrapper">
